--- a/ShopProject/src/index.html
+++ b/ShopProject/src/index.html
@@ -8,9 +8,10 @@
       content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no"
     >
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
-    <title>Sample App</title>
+    <link href="./assets/fonts/full-fontawesome/css/all.css" rel="stylesheet">
+    <title>MyShop</title>
   </head>
   <body>
-    <div id="react-root"></div>
+    <div id="root"></div>
   </body>
 </html>
