--- a/templ/index.html
+++ b/templ/index.html
@@ -269,78 +269,78 @@
 						</ul>
 					</div>
 				</div><!-- Конец основного контента -->
-				<div class="col-3">
-					<h5 class="main-orange">Модульные картины</h5>
-					<ul class="main-list">
-						<li><a href="#">Абстракция</a></li>
-						<li><a href="#">Пейзаж</a></li>
-						<li><a href="#">Города</a></li>
-						<li><a href="#">Животный мир</a></li>
-						<li><a href="#">Цветы, растения</a></li>
-						<li><a href="#">Космос</a></li>
-						<li><a href="#">На кухню</a></li>
-						<li><a href="#">Картины маслом (репродукции)</a></li>
-					</ul>
-					<h5 class="main-pink">Выбор по цвету</h5>
-					<ul class="main-list">
-						<li><a href="#">Белый</a></li>
-						<li><a href="#">Ч/Б</a></li>
-						<li><a href="#">Красный</a></li>
-						<li><a href="#">Бежевый</a></li>
-						<li><a href="#">Зеленый</a></li>
-						<li><a href="#">Фиолетовый</a></li>
-						<li><a href="#">Желтый</a></li>
-						<li><a href="#">Розовый</a></li>
-					</ul>
-					<div class="main-instagram">
-						<a href="#"><img src="img/main-instagram.jpg" alt="Мы в инстаграм"></a>
-						<div class="main-instagram_photos">
-							<a href="#"><img src="img/main-instagram_photos.jpg" alt="Мы в инстаграм"></a>
-						</div>
-					</div>
-					<h5 class="main-orange2">Отзывы о наших картинах</h5>
-					<div class="main-story">
-						<div class="main-story_title">Ксения, г. Алматы</div>
-						<p>Получили картину в срок, качестенная работа, отдельное спасибо за доставку.
-						 Все как обещали! В будущем буду так же заказывать у вас! Спасибо большое!</p>
-						 <div class="main-story_photos">
-							<div><img src="img/main-story.jpg" alt="Портрет"></div>
-							<div><img src="img/main-story.jpg" alt="Портрет"></div>
-						 </div>
-					</div>
-					<div class="main-story">
-						<div class="main-story_title">Ксения, г. Алматы</div>
-						<p>Получили картину в срок, качестенная работа, отдельное спасибо за доставку.
-						 Все как обещали! В будущем буду так же заказывать у вас! Спасибо большое!</p>
-						 <div class="main-story_photos">
-							<div class="main-story_bg"><img src="img/main-story.jpg" alt="Портрет"></div>
-							<div><img src="img/main-story.jpg" alt="Портрет"></div>
-						 </div>
-					</div>
-					<div class="main-story">
-						<div class="main-story_title">Ксения, г. Алматы</div>
-						<p>Получили картину в срок, качестенная работа, отдельное спасибо за доставку.
-						 Все как обещали! В будущем буду так же заказывать у вас! Спасибо большое!</p>
-						 <div class="main-story_photos">
-							<div class="main-story_bg"><img src="img/main-story.jpg" alt="Портрет"></div>
-							<div><img src="img/main-story.jpg" alt="Портрет"></div>
-						 </div>
-					</div>
-					<div class="main-more">
-						<div class="main-more_button"><a href="#">Все отзывы</a></div>
-						<div class="main-more_add">
-							<img src="img/main-more.jpg" alt="Добавить отзыв"> 
-							<a href="#">Добавить отзыв</a>
-						</div>
-					</div>
-					<div class="main-aulike">
-						<div class="main-aulike_title">
-							Понравились картины?
-						</div>
-						<p>Отставьте заявку и мы Вам перезвоним</p>
-						<div class="main-aulike_button"><a href="#">Оставить заявку</a></div>
-					</div>
-				</div><!-- Конец навигации -->
+<!--				<div class="col-3">-->
+<!--					<h5 class="main-orange">Модульные картины</h5>-->
+<!--					<ul class="main-list">-->
+<!--						<li><a href="#">Абстракция</a></li>-->
+<!--						<li><a href="#">Пейзаж</a></li>-->
+<!--						<li><a href="#">Города</a></li>-->
+<!--						<li><a href="#">Животный мир</a></li>-->
+<!--						<li><a href="#">Цветы, растения</a></li>-->
+<!--						<li><a href="#">Космос</a></li>-->
+<!--						<li><a href="#">На кухню</a></li>-->
+<!--						<li><a href="#">Картины маслом (репродукции)</a></li>-->
+<!--					</ul>-->
+<!--					<h5 class="main-pink">Выбор по цвету</h5>-->
+<!--					<ul class="main-list">-->
+<!--						<li><a href="#">Белый</a></li>-->
+<!--						<li><a href="#">Ч/Б</a></li>-->
+<!--						<li><a href="#">Красный</a></li>-->
+<!--						<li><a href="#">Бежевый</a></li>-->
+<!--						<li><a href="#">Зеленый</a></li>-->
+<!--						<li><a href="#">Фиолетовый</a></li>-->
+<!--						<li><a href="#">Желтый</a></li>-->
+<!--						<li><a href="#">Розовый</a></li>-->
+<!--					</ul>-->
+<!--					<div class="main-instagram">-->
+<!--						<a href="#"><img src="img/main-instagram.jpg" alt="Мы в инстаграм"></a>-->
+<!--						<div class="main-instagram_photos">-->
+<!--							<a href="#"><img src="img/main-instagram_photos.jpg" alt="Мы в инстаграм"></a>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--					<h5 class="main-orange2">Отзывы о наших картинах</h5>-->
+<!--					<div class="main-story">-->
+<!--						<div class="main-story_title">Ксения, г. Алматы</div>-->
+<!--						<p>Получили картину в срок, качестенная работа, отдельное спасибо за доставку.-->
+<!--						 Все как обещали! В будущем буду так же заказывать у вас! Спасибо большое!</p>-->
+<!--						 <div class="main-story_photos">-->
+<!--							<div><img src="img/main-story.jpg" alt="Портрет"></div>-->
+<!--							<div><img src="img/main-story.jpg" alt="Портрет"></div>-->
+<!--						 </div>-->
+<!--					</div>-->
+<!--					<div class="main-story">-->
+<!--						<div class="main-story_title">Ксения, г. Алматы</div>-->
+<!--						<p>Получили картину в срок, качестенная работа, отдельное спасибо за доставку.-->
+<!--						 Все как обещали! В будущем буду так же заказывать у вас! Спасибо большое!</p>-->
+<!--						 <div class="main-story_photos">-->
+<!--							<div class="main-story_bg"><img src="img/main-story.jpg" alt="Портрет"></div>-->
+<!--							<div><img src="img/main-story.jpg" alt="Портрет"></div>-->
+<!--						 </div>-->
+<!--					</div>-->
+<!--					<div class="main-story">-->
+<!--						<div class="main-story_title">Ксения, г. Алматы</div>-->
+<!--						<p>Получили картину в срок, качестенная работа, отдельное спасибо за доставку.-->
+<!--						 Все как обещали! В будущем буду так же заказывать у вас! Спасибо большое!</p>-->
+<!--						 <div class="main-story_photos">-->
+<!--							<div class="main-story_bg"><img src="img/main-story.jpg" alt="Портрет"></div>-->
+<!--							<div><img src="img/main-story.jpg" alt="Портрет"></div>-->
+<!--						 </div>-->
+<!--					</div>-->
+<!--					<div class="main-more">-->
+<!--						<div class="main-more_button"><a href="#">Все отзывы</a></div>-->
+<!--						<div class="main-more_add">-->
+<!--							<img src="img/main-more.jpg" alt="Добавить отзыв"> -->
+<!--							<a href="#">Добавить отзыв</a>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--					<div class="main-aulike">-->
+<!--						<div class="main-aulike_title">-->
+<!--							Понравились картины?-->
+<!--						</div>-->
+<!--						<p>Отставьте заявку и мы Вам перезвоним</p>-->
+<!--						<div class="main-aulike_button"><a href="#">Оставить заявку</a></div>-->
+<!--					</div>-->
+<!--				</div>&lt;!&ndash; Конец навигации &ndash;&gt;-->
 			</div>
 		</div>
 		<div class="why">
