--- a/ShopProject/src/index.html
+++ b/ShopProject/src/index.html
@@ -7,6 +7,7 @@
       name="viewport"
       content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no"
     >
+    <base href="/">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
     <link href="./assets/fonts/full-fontawesome/css/all.css" rel="stylesheet">
     <title>MyShop</title>
