--- a/ShopProject/src/index.html
+++ b/ShopProject/src/index.html
@@ -9,7 +9,7 @@
     >
     <base href="/">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
-    <link href="./assets/fonts/full-fontawesome/css/all.css" rel="stylesheet">
+<!--    <link href="./assets/fonts/full-fontawesome/css/all.css" rel="stylesheet">-->
     <title>MyShop</title>
   </head>
   <body>
